objects/OrderItemsActionsByOrderType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>OrderItemAction__c</fullName>
        <label>OrderItemAction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderItemProvisioningStatus__c</fullName>
        <label>OrderItemProvisioningStatus</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderItemStockMovementCode__c</fullName>
        <label>OrderItemStockMovementCode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderItemSubAction__c</fullName>
        <label>OrderItemSubAction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderItemType__c</fullName>
        <label>OrderItemType</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderSubType__c</fullName>
        <label>OrderSubType</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <label>OrderType</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>OrderItemsActionsByOrderType</label>
</CustomObject>